flux/apps/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: default
  annotations:
    tailscale.com/hostname: paperless
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: paperless
      port:
        number: 8000
  tls:
    - hosts: [paperless]
